--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -3,11 +3,11 @@ image: golang:1.10
 pipelines:
   default:
     - step:
-        script: # Modify the commands below to build your repository.
+        script:
           - PACKAGE_PATH="\${GOPATH}/src/programmingpraxis"
           - mkdir -pv "\${PACKAGE_PATH}"
           - tar -cO --exclude-vcs --exclude=bitbucket-pipelines.yml . | tar -xv -C "\${PACKAGE_PATH}"
-          - cd "\${PACKAGE_PATH}"
-          - go get -v
-          - go build -v
-          - go test -v
+          - cd "\${PACKAGE_PATH}/cmd/rpncalculator"
+          - go get programmingpraxis/cmd/rpncalculator -v
+          - go build programmingpraxis/cmd/rpmcalculator -v
+          - go test programmingpraxis/cmd/rpncalculator -v
